# RCSB_APP_TEMPLATE HISTORY
11-Aug-2020  - V0.10 Created module
22-Aug-2020  - V0.11 Initial pipeline implementation
22-Aug-2020  - V0.12 Working pipeline implementation
25-Aug-2020  - V0.13 Add example configuration, example data accessors, and process status

