@@ -1,10 +1,17 @@
-FROM python:3.8-slim as image-compile
+FROM python:3.9-slim as image-compile
 
 LABEL maintainer="John Westbrook <jdwestbrook@gmail.com>"
 #
 ARG BUILD_DATE
 ARG VCS_REF
 ARG VERSION
+
+#
+ARG USER_ID
+ARG GROUP_ID
+RUN addgroup --gid $GROUP_ID ubuntu
+RUN adduser  --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID ubuntu
+
 # Build-time metadata as defined at http://label-schema.org
 LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.name="mytemplate" \
@@ -20,6 +27,7 @@ WORKDIR /app/
 
 # copy requirements file (should include selected versions of uvicorn gunicorn)
 COPY ./requirements.txt /app/requirements.txt
+COPY ./README.md /app/README.md
 
 # install dependencies
 RUN set -eux \
@@ -27,6 +35,8 @@ RUN set -eux \
     cmake \
     flex \
     bison \
+    procps \
+    tini \
     && pip install  --no-cache-dir --upgrade pip setuptools wheel \
     && pip install  --no-cache-dir -r /app/requirements.txt \
     && rm -rf /root/.cache/pip \
@@ -42,11 +52,14 @@ RUN chmod +x /app/entryPoint.sh
 
 COPY ./rcsb/app/tests-template/test-data/config/example-config.json /app/CACHE/config/example-config.json
 COPY ./rcsb/app/tests-template/test-data/config/example-data.cif    /app/CACHE/config/example-data.cif
+RUN chown ubuntu /app/CACHE
+
+EXPOSE 80
+USER ubuntu
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-EXPOSE 80
 
 # Launch the service
-ENTRYPOINT ["/entryPoint.sh"]
+ENTRYPOINT ["/usr/bin/tini", "--", "/app/entryPoint.sh"]
 CMD ["/app/launch.sh"]
