@@ -1,4 +1,9 @@
-FROM python:3.8-slim as image-compile
+##
+# File: Dockerfile.unittest
+# Date: 7-Aug-2021
+#       Build a testing environment for the template application using the tox test runner.
+##
+FROM python:3.9-slim as image-compile
 
 LABEL maintainer="John Westbrook <jdwestbrook@gmail.com>"
 # Build-time metadata as defined at http://label-schema.org
@@ -6,6 +11,12 @@ LABEL maintainer="John Westbrook <jdwestbrook@gmail.com>"
 ARG BUILD_DATE
 ARG VCS_REF
 ARG VERSION
+#
+ARG USER_ID
+ARG GROUP_ID
+RUN addgroup --gid $GROUP_ID ubuntu
+RUN adduser  --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID ubuntu
+
 #
 LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.name="mytemplate" \
@@ -21,6 +32,7 @@ WORKDIR /app/
 
 # copy requirements file (should include selected versions of uvicorn gunicorn)
 COPY ./requirements.txt /app/requirements.txt
+COPY ./README.md /app/README.md
 
 # install dependencies
 RUN set -eux \
@@ -47,12 +59,13 @@ COPY ./deploy/gunicorn_conf.py /app/gunicorn_conf.py
 COPY ./rcsb/app/tests-template/test-data/config/example-config.json /app/CACHE/config/example-config.json
 COPY ./rcsb/app/tests-template/test-data/config/example-data.cif    /app/CACHE/config/example-data.cif
 
+EXPOSE 8000
+USER ubuntu
+
 # ENV PYTHONPATH=/rcsb
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV CACHE_PATH /app/CACHE
-
-EXPOSE 80
 
 # Run test suite
 CMD ["tox"]
