@@ -42,11 +42,12 @@ coverage_cutoff = 70
 #           4-Sep-2019 jdw Add support for multiple fixtures (3)
 #          11-Dec-2019 jdw Py38 version
 #          18-Aug-2020 jdw change tp skip_install= True recreate        = False
+#           6-Aug-2021 jdw Py39 version
 #
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py38}, lint_pylint-{py38}, format_black-{py38}, py{38}, test_coverage-{py38}
+envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39}, test_coverage-{py39}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -59,40 +60,13 @@ deps = echo
 commands =
     echo "Starting default tests in testenv"
 
-[testenv:py27]
+[testenv:py39]
 description = 'Run unit tests (unittest runner) using {envpython}'
 whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =
-    py27: python2.7
-skip_install = true
-recreate = false
-alwayscopy=true
-usedevelop=true
-deps = echo
-       -r requirements.txt
-commands =
-    echo "Starting {envname}"
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_1} --pattern "{[local_settings]fixture_pattern_1}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_2} --pattern "{[local_settings]fixture_pattern_2}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_3} --pattern "{[local_settings]fixture_pattern_3}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern_1}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern_2}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern_3}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern_4}"
-    echo "Completed {envname}"
-
-[testenv:py38]
-description = 'Run unit tests (unittest runner) using {envpython}'
-whitelist_externals = echo
-platform=
-       macos: darwin
-       linux: linux
-basepython =
-    py38: python3.8
+basepython = python3.9
 skip_install = true
 recreate = false
 alwayscopy=true
@@ -112,13 +86,13 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py38]
+[testenv:format_pep8-py39]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py38: python3.8
+basepython = python3.9
 skip_install = true
 recreate = false
 deps =
@@ -133,13 +107,13 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py38]
+[testenv:lint_pylint-py39]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py38: python3.8
+basepython = python3.9
 skip_install = true
 recreate = false
 
@@ -153,32 +127,35 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py38]
+[testenv:format_black-py39]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py38: python3.8
+basepython = python3.9
+skip_install = true
+recreate = false
+
 deps =
     echo
-    black>=19.3b0
+    black>=21.5b1
     -r requirements.txt
     #    isort>=4.3.20
 commands =
     echo "Starting {envname}"
-    black --check --line-length 180  {[local_settings]source_paths}
+    black --check --line-length 185  {[local_settings]source_paths}
     #    isort -rc rcsb/utils --check-only
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py38]
+[testenv:test_coverage-py39]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
        linux: linux
 whitelist_externals = echo
-basepython = py38: python3.8
+basepython = python3.9
 skip_install = true
 recreate = false
 alwayscopy=true
